--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .DS_Store
 node_modules
 /dist
+/.history
 
 # local env files
 .env.local
@@ -20,3 +21,4 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
+.history/src/views/approve/ApproveDetail_20200716172351.vue
